--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#"><li>Login</li></a>
      </div>
      <div class="search">
-       <input type="text" name="" id="" placeholder="Raadi wararkii ku dhaafay">
+       <input type="text" name="" id="" placeholder="halkan ka Raadi alaabtaad ubaahantahay">
        <button> Search</button>
        <i class=" fa fa-search"></i>
      </div>
